INCLUDE(${QT_USE_FILE})

SET(MAP_VIEWER_SOURCES
	${SRC_ROOT}/viewer/viewer.cpp

	${SRC_ROOT}/viewer/main_window.cpp
	${SRC_ROOT}/viewer/map_widget.cpp
)

SET(MAP_VIEWER_HEADERS

	${SRC_ROOT}/viewer/main_window.hpp
	${SRC_ROOT}/viewer/map_widget.hpp
	${SRC_ROOT}/viewer/map_view.hpp
)


SET(MAP_VIEWER_FORMS )
SET(MAP_VIEWER_RESOURCES ${SRC_ROOT}/viewer/mdi.qrc )

QT4_WRAP_CPP(MAP_VIEWER_MOC_SOURCES ${MAP_VIEWER_HEADERS})
QT4_WRAP_UI(MAP_VIEWER_UI_HEADERS ${MAP_VIEWER_FORMS} )
QT4_ADD_RESOURCES(MAP_VIEWER_RC_SOURCES ${MAP_VIEWER_RESOURCES} )

IF ( WIN32 )
ADD_EXECUTABLE(mapviewer WIN32 ${MAP_VIEWER_SOURCES} ${MAP_VIEWER_MOC_SOURCES} ${MAP_VIEWER_RC_SOURCES})
ELSE ( WIN32 )
ADD_EXECUTABLE(mapviewer ${MAP_VIEWER_SOURCES} ${MAP_VIEWER_HEADERS}  ${MAP_VIEWER_MOC_SOURCES} ${MAP_VIEWER_RC_SOURCES} )
ENDIF ( WIN32 )

TARGET_LINK_LIBRARIES(mapviewer mapserver ${Boost_LIBRARIES}  ${SQLITE3_LIBRARY} ${ZLIB_LIBRARY} ${QT_LIBRARIES} pthread dl)

INSTALL(TARGETS mapviewer DESTINATION bin)
